--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,16 @@
     <meta name="twitter:site:id" content="1524709850">
     <meta name="twitter:creator:id" content="64360611">
     <meta name="twitter:description" content="Hydra simplifies the development of interoperable, hypermedia-driven Web APIs">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Exo:400,700">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:400,700">
+    <link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.5.0/pure-min.css">
     <!--[if lte IE 8]>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
+    <link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
     <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+    <link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
     <!--<![endif]-->
-    <link rel="stylesheet" href="http://www.hydra-cg.com/css/styles.css">
-    <link rel="stylesheet" href="http://www.hydra-cg.com/css/minute-styles.css">
+    <link rel="stylesheet" href="https://www.hydra-cg.com/css/styles.css">
+    <link rel="stylesheet" href="https://www.hydra-cg.com/css/minute-styles.css">
     <!--<![endif]-->
 </head>
 <body>
