insecure img url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 <body>
 <div class="header">
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-        <span class="pure-menu-heading"><a href="/"><img src="http://www.hydra-cg.com/img/logo.svg" alt="Hydra"></a></span>
+        <span class="pure-menu-heading"><a href="/"><img src="https://www.hydra-cg.com/img/logo.svg" alt="Hydra"></a></span>
         <ul>
             <li><a href="http://www.hydra-cg.com/#specifications">Specifications</a></li>
             <li><a href="http://www.hydra-cg.com/#community">Community</a></li>
