add generation of main index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,16 @@
     <link rel="stylesheet" href="https://www.hydra-cg.com/css/styles.css">
     <link rel="stylesheet" href="https://www.hydra-cg.com/css/minute-styles.css">
     <!--<![endif]-->
+    <style>
+        .anchor {
+            display: block;
+            position: relative;
+            top: -93px;
+            visibility: hidden;
+            padding: unset;
+            margin: unset;
+        }
+    </style>
 </head>
 <body>
 <div class="header">
