move repeating text from titles into layout file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} | Hydra W3C Community Group</title>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site:id" content="1524709850">
     <meta name="twitter:creator:id" content="64360611">
